<resources>
    <string name="app_name">JuegoZombie</string>

    <dimen name="sizeTitle">25sp</dimen>

    <!-- Main Activity-->
    <string name="btnLogin">Login</string>
    <string name="btnRegistro">Registro</string>

    <!-- Nuevo Jugador -->
    <string name="txtTitleRegistro">Nuevo Jugador</string>
    <string name="txtNombre">Nombre</string>
    <string name="txtEdad">Edad</string>
    <string name="txtPais">Pais</string>
    <string name="txtEmail">Email</string>
    <string name="txtPassword">Contraseña</string>
    <string name="btnRegistrar">Registrar</string>
    <string name="txtFecha">Fecha</string>
    <string-array name="lisPaises">


        <item>Ecuador</item>
        <item>Colombia</item>
        <item>Peru</item>
        <item>Venezuela</item>
        <item>Argentina</item>
    </string-array>


    <dimen name="mg_tb">10dp</dimen>
    <dimen name="btnFontSize">18sp</dimen>

    <!-- Activity Login-->

    <string name="txtTitleLogin">Login</string>
    <string name="txtCorreoLogin">Correo Electrónico</string>
    <string name="txtPassLogin">Contraseña</string>
    <string name="txtBtnLogin">Ingresar</string>

    <!-- Activity Menu-->
    <string name="txtTitleMenu">MI PUNTUACION</string>
    <string name="txtTitlePerfil">MI PERFIL</string>
    <string name="txtSubTitleMenu">MENU</string>

    <string name="btnJugarMenu">JUGAR</string>
    <string name="btnPuntuMenu">PUNTUACIONES</string>
    <string name="btnEditar">EDITAR</string>
    <string name="btnCambiarPass">CAMBIAR CONTRASEÑA</string>
    <string name="btnAcercaMenu">ACERCA DE</string>
    <string name="btnSalirMenu">SALIR</string>
    <string name="play">play</string>

    <string name="itemPerfil">Ver Perfil</string>
    <string name="itemAcerca">Acerca de</string>
    <string name="itemCerrarSesion">Cerrar Sesion</string>


    <!-- GAMEOVER-->
    <string name="seacaboTxt">¡Se acabo el tiempo!</string>
    <string name="hasMatadoTxt">Has Matado</string>
    <string name="numeroTxt">--</string>
    <string name="jugarDeNuevo">JUGAR DE NUEVO</string>
    <string name="irMenu">MENU</string>
    <string name="puntajes">VER PUNTAJES</string>


    <!-- CAMBIO PASSWORD-->
    <string name="txtActualPassCambio">Actual Contraseña</string>
    <string name="txtNuevaPassCambio">Nueva Contraseña</string>
    <string name="btnPassCambio">Guardar Cambios</string>
    <string name="txtTitleCambio">Cambiar Contraseña</string>

</resources>