<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_fondo"
    tools:context=".CambioPassword">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/txtTitleCambio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/txtTitleCambio"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/sizeTitle"
            android:textStyle="bold" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:src="@drawable/cambiar_pass" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/mg_tb"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/txtPassdActualCambio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/txtActualPassCambio"
                android:inputType="textPassword"
                android:textColor="@color/color_fondo" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/mg_tb"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/txtPassdNuevaCambio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/txtNuevaPassCambio"
                android:inputType="textPassword"
                android:textColor="@color/color_fondo" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnCambiarPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/boton_personalizado"
            android:text="@string/btnPassCambio"
            android:textColor="@color/color_fondo"
            android:textSize="@dimen/btnFontSize"
            android:textStyle="bold"
            app:backgroundTint="@null" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</RelativeLayout>