<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_fondo"
    android:padding="10dp"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
       >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/txtTitleLogin"
                android:layout_width="match_parent"
                android:text="@string/txtTitleLogin"
                android:textSize="@dimen/sizeTitle"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginBottom="12dp"
                android:textColor="@color/white"
                android:layout_height="wrap_content"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView2"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/default_perfil"/>
        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">

            <EditText
                android:layout_width="match_parent"
                android:background="@color/white"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/txtCorreoLogin"
                android:textColor="@color/color_fondo"
                android:id="@+id/emailLogin"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:background="@color/white"
                android:textColor="@color/color_fondo"
                android:hint="@string/txtPassLogin"
                android:id="@+id/passLogin"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnIngresarLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtBtnLogin"
            android:layout_marginTop="15dp"
            android:textSize="@dimen/btnFontSize"
            android:textColor="@color/color_fondo"
            app:backgroundTint ="@null"
            android:background="@drawable/boton_personalizado"/>
    </LinearLayout>
</RelativeLayout>